# mlh_proj

./: README.md
backend/: pyproject.toml
backend/app/: main.py  pyproject.toml  start.sh
backend/app/app/: main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: all.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  all.py
backend/app/app/db/: base.py  session.py
backend/app/app/models/: __init__.py  agency.py  all.py  exception_types.py  feed_info.py
backend/app/app/schemas/: __init__.py  all.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/navigation/: index.js
frontend/src/data/: routes.json  trips.json
frontend/src/pages/error-page/: index.js
frontend/src/pages/home/: index.js
frontend/src/pages/visualization/: index.js
